--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-select": "^5.10.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.17.2"
